--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "yuunie/googletts",
-    "description": "一个获取Google翻译TTS的包,输入需要的文字获得语音链接",
+    "description": "Get Google TTS URL",
     "type": "library",
     "require": {
         "php": ">=5.4"
