--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
             "email": "1591216902@qq.com"
         }
     ],
+    "autoload":{
+    	"psr-4": {
+            "Yuunie\\": ""
+        }
+    },
     "minimum-stability": "dev"
 }
